Etiquetas de formulario

--- a/sesion02/ejemplo02.html
+++ b/sesion02/ejemplo02.html
@@ -7,8 +7,10 @@
 <body>
     <!-- formularios -->
     <form action="" method="POST">
+        <!-- for del label conecta al id del input -->
         <label for="nombre">Nombre:</label>
         <input type="text" id="nombre"><br>
+
         <label for="apellido">Apellidos:</label>
         <input type="text" id="apellido"><br>
 
