--- a/sesion02/ejemplo01.html
+++ b/sesion02/ejemplo01.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Dev Master - ejercicio 01</title>
+    <title>Dev Master - ejemplo01</title>
 </head>
 <body>
     <header>
