--- a/sesion02/ejemplo02.html
+++ b/sesion02/ejemplo02.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Dev Master - ejercicio 2</title>
+    <title>Dev Master - ejemplo02</title>
 </head>
 <body>
     <!-- formularios -->
