--- a/sesion02/ejemplo03.html
+++ b/sesion02/ejemplo03.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Dev Master - ejercicio 3</title>
+    <title>Dev Master - ejemplo03</title>
 </head>
 <body>
     <!-- formulario -->
