--- a/sesion02/ejemplo05.html
+++ b/sesion02/ejemplo05.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Dev Master - ejercicio 5</title>
+    <title>Dev Master - ejemplo05</title>
 </head>
 <body>
     <!-- explicacion del metodo GET Y POST -->
@@ -11,7 +11,7 @@
         <input type="text" name="usuario" placeholder="Ingresar Usuario"><br>
         <input type="password" name="contrasenia" placeholder="Ingresar Contraseña"><br>
 
-        <!-- utilizando button -->
+        <!-- botones button -->
         <button type="submit">Ingresar</button>
         <button type="reset">Restablecer</button>
         <button type="button">Boton</button>
