--- a/sesion02/ejemplo08.html
+++ b/sesion02/ejemplo08.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Dev Master - ejercicio 8</title>
+    <title>Dev Master - ejemplo08</title>
 </head>
 <body>
     <form action="" method="POST">
