--- a/sesion02/ejemplo10.html
+++ b/sesion02/ejemplo10.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Dev Master - ejercicio 10</title>
+    <title>Dev Master - ejemplo10</title>
 </head>
 <body>
     <!-- optgroup, con su atributo label -->
