--- a/sesion02/ejemplo11.html
+++ b/sesion02/ejemplo11.html
@@ -2,14 +2,14 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Dev Master - ejercicio 11</title>
+    <title>Dev Master - ejemplo11</title>
 </head>
 <body>
     <!-- select como buscador -->
     <form action="" method="POST">
-        <label for=""> Mi fruta favorita</label>
+        <label for="frutas"> Mi fruta favorita</label>
 
-        <input type="text" name="fruta" list="frutas">
+        <input type="text" id="frutas" name="fruta" list="frutas">
         <datalist id="frutas">
             <option value="manzana">Manzana</option>
             <option value="platano">Platano</option>
