--- a/sesion02/ejemplo12.html
+++ b/sesion02/ejemplo12.html
@@ -2,7 +2,7 @@
 <html lang="">
 <head>
     <meta charset="UTF-8">
-    <title>Dev Master - ejercicio 12</title>
+    <title>Dev Master - ejemplo12</title>
 </head>
 <body>
     <!-- pattern -->
