--- a/sesion02/ejemplo13.html
+++ b/sesion02/ejemplo13.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Dev Master - ejercicio 13</title>
+    <title>Dev Master - ejemplo13</title>
 </head>
 <body>
     <section>
