--- a/sesion02/ejemplo06.html
+++ b/sesion02/ejemplo06.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Dev Master - ejercicio 6</title>
+    <title>Dev Master - ejemplo06</title>
 </head>
 <body>
     <form action="formulario-exitoso.html" method="POST">
