--- a/sesion02/ejemplo07.html
+++ b/sesion02/ejemplo07.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Dev Master - ejercicio 7</title>
+    <title>Dev Master - ejemplo07</title>
 </head>
 <body>
     <form action="" method="POST">
