--- a/sesion02/ejemplo15.html
+++ b/sesion02/ejemplo15.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Dev Master - ejercicio 15</title>
+    <title>Dev Master - ejemplo15</title>
 </head>
 <body>
     <section>
