Psedo-clase nth-child

--- a/sesion01/ejemplo01.html
+++ b/sesion01/ejemplo01.html
@@ -2,7 +2,9 @@
 <html lang="es"> <!-- Especificamos en que idioma esta nuestro sitio web -->
     <head>
         <meta charset="UTF-8"> <!-- caracteres especiales como la ñ y tildes -->
+        <!-- descripcion de nuestro sitio web -->
         <meta name="description" content="Curso Desarrollo Web Frontend">
+        <!-- palabras claves para que los buscadores encuentren nuestro sitio web -->
         <meta name="keywords" content="Desarrollo Web Frontend, Html5, Css3, Javascript">
         <title>Dev Master | Inicio</title>
     </head>
