--- a/sesion03/ejercicio14-nth-child.html
+++ b/sesion03/ejercicio14-nth-child.html
@@ -98,22 +98,26 @@
     </article>
     <br>
     <br>
-    <ul class="selector3">
-        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque eveniet reprehenderit dolore beatae, eius neque explicabo tempore quos sapiente quis saepe in officia distinctio et quo alias quam velit quidem?</li>
-        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque eveniet reprehenderit dolore beatae, eius neque explicabo tempore quos sapiente quis saepe in officia distinctio et quo alias quam velit quidem?</li>
-        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque eveniet reprehenderit dolore beatae, eius neque explicabo tempore quos sapiente quis saepe in officia distinctio et quo alias quam velit quidem?</li>
-        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque eveniet reprehenderit dolore beatae, eius neque explicabo tempore quos sapiente quis saepe in officia distinctio et quo alias quam velit quidem?</li>
-        <li></li>
-    </ul>
+    <nav>
+        <ul class="selector3">
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque eveniet reprehenderit dolore beatae, eius neque explicabo tempore quos sapiente quis saepe in officia distinctio et quo alias quam velit quidem?</li>
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque eveniet reprehenderit dolore beatae, eius neque explicabo tempore quos sapiente quis saepe in officia distinctio et quo alias quam velit quidem?</li>
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque eveniet reprehenderit dolore beatae, eius neque explicabo tempore quos sapiente quis saepe in officia distinctio et quo alias quam velit quidem?</li>
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque eveniet reprehenderit dolore beatae, eius neque explicabo tempore quos sapiente quis saepe in officia distinctio et quo alias quam velit quidem?</li>
+            <li></li>
+        </ul>
+    </nav>
     <br>
     <br>
-    <ol class="selector4">
-        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque eveniet reprehenderit dolore beatae, eius neque explicabo tempore quos sapiente quis saepe in officia distinctio et quo alias quam velit quidem?</li>
-        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque eveniet reprehenderit dolore beatae, eius neque explicabo tempore quos sapiente quis saepe in officia distinctio et quo alias quam velit quidem?</li>
-        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque eveniet reprehenderit dolore beatae, eius neque explicabo tempore quos sapiente quis saepe in officia distinctio et quo alias quam velit quidem?</li>
-        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque eveniet reprehenderit dolore beatae, eius neque explicabo tempore quos sapiente quis saepe in officia distinctio et quo alias quam velit quidem?</li>
-        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque eveniet reprehenderit dolore beatae, eius neque explicabo tempore quos sapiente quis saepe in officia distinctio et quo alias quam velit quidem?</li>
-    </ol>
+    <nav>
+        <ol class="selector4">
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque eveniet reprehenderit dolore beatae, eius neque explicabo tempore quos sapiente quis saepe in officia distinctio et quo alias quam velit quidem?</li>
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque eveniet reprehenderit dolore beatae, eius neque explicabo tempore quos sapiente quis saepe in officia distinctio et quo alias quam velit quidem?</li>
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque eveniet reprehenderit dolore beatae, eius neque explicabo tempore quos sapiente quis saepe in officia distinctio et quo alias quam velit quidem?</li>
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque eveniet reprehenderit dolore beatae, eius neque explicabo tempore quos sapiente quis saepe in officia distinctio et quo alias quam velit quidem?</li>
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque eveniet reprehenderit dolore beatae, eius neque explicabo tempore quos sapiente quis saepe in officia distinctio et quo alias quam velit quidem?</li>
+        </ol>
+    </nav>
     <br>
     <br>
     <article class="selector5">
