--- a/sesion04/ejercicio08.html
+++ b/sesion04/ejercicio08.html
@@ -5,11 +5,11 @@
     <title>Dev Master - ejercicio </title>
     <style>
         h1 {
-            color: tomato; /* color pre definido*/
+            color: tomato; /* color predefinido*/
         }
 
         h3 {
-            color: #FFDD1C; /* color hex RRGGBB */
+            color: #FFDD1C; /* color hex #RRGGBB */
         }
 
         .articulo1 p {
@@ -26,7 +26,7 @@
 
         .articulo1 a {
             /*
-            h = hue = tono = (0 - 360) | 0 rojo | 120 verde | 240 azul
+            h = hue = tono = (0 - 360) | 0 RED | 120 GREEN | 240 BLUE
             s = saturation = saturación (0% - 100%)
             l = lightness = luminosidad (0% - 100%)
             */
@@ -36,7 +36,7 @@
             a = alfa (0.0 - 1.0)
             */
         .articulo2 a {
-            color: hsl(120,50%,50%,0.5);
+            color: hsla(120,50%,50%,0.5);
         }
     </style>
 </head>
