--- a/sesion04/ejercicio11.html
+++ b/sesion04/ejercicio11.html
@@ -18,7 +18,7 @@
     </style>
 </head>
 <body>
-    <!-- solapamiento de margenes en vetical -->
+    <!-- solapamiento de margenes en vertical -->
     <header>
         Soy la cabecera
     </header>
