Finalizando maquetacion Awesome App

--- a/awesome-app/index.html
+++ b/awesome-app/index.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="css/normalize.css">
     <!-- css -->
     <link rel="stylesheet" href="css/style.css">
+    <!-- linaricons -->
+    <link rel="stylesheet" href="css/linearicons.css">
 </head>
 <body>
     <header class="main-header">
@@ -126,6 +128,87 @@
         </div>
     </section> <!-- main-screenshots -->
 
+    <section class="main-package">
+        <div class="main-container">
+            <section class="package">
+                <div class="package-top">
+                    <h2>We’ve got the perfect package for you</h2>
+                    <p>A section to display your pricing structure. Make sure to highlight your most popular plan like shown below. Replace this text to describe your pricing plan.</p>
+                </div>
+                <div class="package-list">
+                    <div class="package-item">
+                        <div class="package-card">
+                            <h4>Basic</h4>
+                            <strong>
+                                <sup>$</sup>12.0
+                                <span>/m</span>
+                            </strong>
+                            <ul>
+                                <li>One User</li>
+                                <li>Multiple Access</li>
+                                <li>SMS Support</li>
+                                <li>24/7 Online Support</li>
+                            </ul>
+                            <p>Start Free Trial</p>
+                            <a href="#">buy now</a>
+                        </div>
+                    </div>
+                    <div class="package-item">
+                        <div class="package-card">
+                            <h4>Standard</h4>
+                            <strong>
+                                <sup>$</sup>24.0
+                                <span>/m</span>
+                            </strong>
+                            <ul>
+                                <li>One User</li>
+                                <li>Multiple Access</li>
+                                <li>SMS Support</li>
+                                <li>24/7 Online Support</li>
+                            </ul>
+                            <p>Start Free Trial</p>
+                            <a href="#">buy now</a>
+                        </div>
+                    </div>
+                    <div class="package-item">
+                        <div class="package-card">
+                            <h4>Premium</h4>
+                            <strong>
+                                <sup>$</sup>250.0
+                                <span>/m</span>
+                            </strong>
+                            <ul>
+                                <li>One User</li>
+                                <li>Multiple Access</li>
+                                <li>SMS Support</li>
+                                <li>24/7 Online Support</li>
+                            </ul>
+                            <p>Start Free Trial</p>
+                            <a href="#">buy now</a>
+                        </div>
+                    </div>
+                    <div class="package-item">
+                        <div class="package-card">
+                            <h4>Enterprise</h4>
+                            <strong>
+                                <sup>$</sup>999.0
+                                <span>/m</span>
+                            </strong>
+                            <ul>
+                                <li>One User</li>
+                                <li>Multiple Access</li>
+                                <li>SMS Support</li>
+                                <li>24/7 Online Support</li>
+                            </ul>
+                            <p>Start Free Trial</p>
+                            <a href="#">buy now</a>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </div>
+    </section> <!-- main-package  -->
+
     <section class="main-download-app">
         <div class="main-container">
             <section class="download-app">
@@ -166,6 +249,23 @@
             </section>
         </div>
     </section> <!-- main-download-app -->
-    
+    <footer class="main-footer">
+        <div class="main-container">
+            <section class="footer">
+                <nav class="awesome-link">
+                    <ul>
+                        <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+                        <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                        <li><a href="#"><i class="fab fa-google-plus-g"></i></a></li>
+                        <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                    </ul>
+                </nav>
+                <p>Copyright © Dev Master Perú. All rights reserved. <br>
+                Design - Template</p>
+            </section>
+        </div>
+    </footer> <!-- main-footer -->
+    <!-- font-awesome -->
+    <script src="https://kit.fontawesome.com/4e8c731652.js"></script>
 </body>
 </html>
