--- a/sesion06/awesome-app/index.html
+++ b/sesion06/awesome-app/index.html
@@ -28,6 +28,9 @@
                         <li><a class="btn" href="#">download now</a></li>
                     </ul>
                 </nav>
+                <a href="#" class="menu-mobile">
+                    <span class="icon-open"></span>
+                </a>
             </section>
         </div>
     </header> <!-- main-header -->
