Introduccion a JS y JQ

--- a/sesion06/awesome-app/index.html
+++ b/sesion06/awesome-app/index.html
@@ -14,6 +14,19 @@
     <link rel="stylesheet" href="css/linearicons.css">
 </head>
 <body>
+    <!-- menu-canvas -->
+    <nav class="menu-canvas"> <!-- canvas-visibility -->
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Features</a></li>
+            <li><a href="#">Pricing</a></li>
+            <li><a href="#">Download Now</a></li>
+        </ul>
+        <a href="#">
+            <span class="icon-close"></span>
+        </a>
+    </nav>
+
     <header class="main-header">
         <div class="main-container">
             <section class="header">
