Introduccion a JS y JQ

--- a/sesion08/ejercicio02.html
+++ b/sesion08/ejercicio02.html
@@ -63,8 +63,8 @@
         console.log(docentes.length); // cantidad de elemento del arreglo 5
 
         // accediendo a elementos
-        console.log(docentes[0]); // Primer elemento:  Javier Diaz
-        console.log(docentes[4]); // Ultimo elemento: Jesús Gonzales
+        console.log("indice-0", docentes[0]); // Primer elemento:  Javier Diaz
+        console.log("indice-4", docentes[4]); // Ultimo elemento: Jesús Gonzales
 
         // agregando elementos
         docentes[5] = "Mathieu Gonzales";
@@ -175,8 +175,6 @@
 
         delete alumno.nombreCompleto; // eliminando metodo nombreCompleto
         console.log(alumno);
-
-
     </script>
 </body>
 </html>
