Introduccion a JS y JQ

--- a/sesion08/ejercicio09.html
+++ b/sesion08/ejercicio09.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Dev Master - ejercicio </title>
+    <title>Dev Master - Evento Click </title>
     <style>
         div {
             width: 100px;
@@ -30,8 +30,7 @@
 
     </div>
     <!-- jquery -->
-    <script src="js/jQueryv3.4.1.js"></script>
-
+    <script src="js/jquery-3.4.1.min.js"></script>
     <script>
         $(document).ready(function(){
             $(".btn").on("click",function(){
